--- a/src/main/webapp/WEB-INF/hibernate.properties
+++ b/src/main/webapp/WEB-INF/hibernate.properties
@@ -3,6 +3,6 @@ hibernate.hbm2ddl.auto=update
 hibernate.show_sql=false
 hibernate.format_sql=true
 # Database Connection
-db.url=jdbc:mysql://127.0.0.1:3306/weibo?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-db.username=www
-db.password=
+db.url=jdbc:mysql://222.27.227.131:3306/weibo?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+db.username=root
+db.password=Data-Node-MySQL
